* Dear Esther - Steam only
* Dinner Date - Steam only
* Driver San Francisco - Contributed by Arc Angel
* Explodemon - Contributed by Arc Angel
* Full throttle - ScummVM only
* Jurassic Park: The Game - Contributed by Arc Angel
* King Arthur II - Contributed by Arc Angel
* Lone Survivor - Contributed by Arc Angel
* Normality - GoG only
* Sam & Max Hit The Road - ScummVM only
* Superbrothers: Sword & Sorcery
* The Walking Dead - Contributed by Arc Angel
* Wing Commander IV: The Price Of Freedom - GoG only
New Steam Games:
* Midnight Club II - Contributed by Arc Angel
New DOS Games:
* Full Throttle
* Sam & Max Hit The Road
New Flash Games:
* Lone Survivor
New Android Games:
* Galaxy on Fire 2
* Grand Theft Auto 3
* Shadowgun
* Minecraft
Updated Windows Games:
* Blackwell Trilogy - Updated for regular installs
* Cryostasis - Added GoG info
* King's Quest 1-6 - Added ScummVM info
* Limbo - Added downloaded install info
* Return to Zork - Added ScummVM info
* Space Quest 1-5 - Added ScummVM info
* Super Meat Boy - Added normal install info
=2012/5/21=
New Windows Games:
* 18 Wheels of Steel: Extreme Trucker - Contributed by AdmiringWorm
* 7554 - Contributed by AdmiringWorm
* Alan Wake - Steam only - Contributed by Arc Angel
* Angry Birds Space - Contributed by cheshhire
* APB Reloaded - Accounts, Settings, Statistics only - Contributed by AdmiringWorm
* B.A.D - Battle Armor Division - Contributed by Arc Angel
* Black Market - Contributed by Arc Angel
* Cities in Motion - Contributed by AdmiringWorm
* The Darkness II - Contributed by Arc Angel
* Deep Black Reloaded - Contributed by AdmiringWorm
* Depth Hunter - Contributed by Arc Angel
* Dungeon Siege III - Contributed by Arc Angel
* Kingdoms of Amalur: Reckoning - Steam only - Contributed by Arc Angel
* Legends of Grimrock - Contributed by Arc Angel
* Mass Effect 3 - Contributed by AdmiringWorm
* M.U.D. TV . Contributed by AdmiringWorm
* Payday: The Heist - Steam only - Contributed by Arc Angel